# prose-forge

./: .gitignore  README.md  chapter_comparison.html  chapter_generation.yaml  experiments.yaml  pyproject.toml  test_fixed.html  test_fixed_ranking.py  test_from_json.html  test_modular_criteria.html
archive/: audition_and_review_spec_update.py  critic_panel.py  driver.py  metrics.py  pipeline_select.py  polish.py
archive/docs/: audition_workflow.mmd  workflow.md
config/editor_specs/: assertive.md  baseline.md
config/voice_specs/: bram_stoker_diary.md  cosmic_clarity.md  cosmic_clarity_custom.md  cosmic_clarity_short.md  cosmic_clarity_simplified.md  lotm_o3_1.md  lovecraft.md  mr_james_whisper.md  neutral.md  neutral_control.md  sanderson_clarity.md  stars_and_shadow.md  universal_claude.md  victorian_gothic.md
config/writer_specs/: README.md  baseline.prompt  baseline_2.prompt  elaborate.json  elaborate.prompt  simplified.prompt  (+2 more)
examples/: experiments_example.yaml  voice_spec_example.md
intermediate_results/: rankings_20250524_135024.json
proseforge/: __init__.py
proseforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: audition.py  audition_and_review.py  audition_iterative.py  build_raw_lotm.ps1  compare_sizes.py  compare_versions.py  critic_panel.py  diverge.py  editor_panel.py  export_original.py  fix_encoding.py  pairwise_ranker.py  polish.py  run_experiments.py  sanity_checker.py  segment.py  segment_chapters.py  split_full.py  writer.py  writer_original.py
tests/: test_file_loaders.py  test_ranking.py  test_segment.py
(+44 files in other folders)
