[project]
name = "proseforge"
version = "0.1.0"
description = "ProseForge – refine web‑novel chapters into polished English prose"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",      # LLM inference backend
    "datasets>=2.19.0",   # dataset loading & streaming
    "sacrebleu>=2.4.0",   # BLEU / quality metrics
    "pydantic>=2.6.0",    # typed configs
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.0"
]

[tool.black]
line-length = 100
